new k8s versions support

--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -31,6 +31,8 @@ kube-apiserver:
     version: v1.27.4
   v1.27.8:
     version: v1.27.8
+  v1.27.13:
+    version: v1.27.13
   v1.28.0:
     version: v1.28.0
   v1.28.3:
@@ -41,8 +43,12 @@ kube-apiserver:
     version: v1.28.6
   v1.28.8:
     version: v1.28.8
+  v1.28.9:
+    version: v1.28.9
   v1.29.1:
     version: v1.29.1
+  v1.29.4:
+    version: v1.29.4
 kube-controller-manager:
   v1.23.1:
     version: v1.23.1
@@ -74,6 +80,8 @@ kube-controller-manager:
     version: v1.27.4
   v1.27.8:
     version: v1.27.8
+  v1.27.13:
+    version: v1.27.13
   v1.28.0:
     version: v1.28.0
   v1.28.3:
@@ -84,8 +92,12 @@ kube-controller-manager:
     version: v1.28.6
   v1.28.8:
     version: v1.28.8
+  v1.28.9:
+    version: v1.28.9
   v1.29.1:
     version: v1.29.1
+  v1.29.4:
+    version: v1.29.4
 kube-scheduler:
   v1.23.1:
     version: v1.23.1
@@ -117,6 +129,8 @@ kube-scheduler:
     version: v1.27.4
   v1.27.8:
     version: v1.27.8
+  v1.27.13:
+    version: v1.27.13
   v1.28.0:
     version: v1.28.0
   v1.28.3:
@@ -127,8 +141,12 @@ kube-scheduler:
     version: v1.28.6
   v1.28.8:
     version: v1.28.8
+  v1.28.9:
+    version: v1.28.9
   v1.29.1:
     version: v1.29.1
+  v1.29.4:
+    version: v1.29.4
 kube-proxy:
   v1.23.1:
     version: v1.23.1
@@ -160,6 +178,8 @@ kube-proxy:
     version: v1.27.4
   v1.27.8:
     version: v1.27.8
+  v1.27.13:
+    version: v1.27.13
   v1.28.0:
     version: v1.28.0
   v1.28.3:
@@ -170,8 +190,12 @@ kube-proxy:
     version: v1.28.6
   v1.28.8:
     version: v1.28.8
+  v1.28.9:
+    version: v1.28.9
   v1.29.1:
     version: v1.29.1
+  v1.29.4:
+    version: v1.29.4
 pause:
   v1.23.1:
     version: '3.6'
@@ -203,6 +227,8 @@ pause:
     version: '3.9'
   v1.27.8:
     version: '3.9'
+  v1.27.13:
+    version: '3.9'
   v1.28.0:
     version: '3.9'
   v1.28.3:
@@ -213,7 +239,11 @@ pause:
     version: '3.9'
   v1.28.8:
     version: '3.9'
+  v1.28.9:
+    version: '3.9'
   v1.29.1:
+    version: '3.9'
+  v1.29.4:
     version: '3.9'
 etcd:
   v1.23.1:
@@ -246,6 +276,8 @@ etcd:
     version: 3.5.7-0
   v1.27.8:
     version: 3.5.9-0
+  v1.27.13:
+    version: 3.5.12-0
   v1.28.0:
     version: 3.5.9-0
   v1.28.3:
@@ -256,8 +288,12 @@ etcd:
     version: 3.5.10-0
   v1.28.8:
     version: 3.5.12-0
+  v1.28.9:
+    version: 3.5.12-0
   v1.29.1:
     version: 3.5.10-0
+  v1.29.4:
+    version: 3.5.12-0
 coredns/coredns:
   v1.23.1:
     version: v1.8.6
@@ -289,6 +325,8 @@ coredns/coredns:
     version: v1.10.1
   v1.27.8:
     version: v1.10.1
+  v1.27.13:
+    version: v1.10.1
   v1.28.0:
     version: v1.10.1
   v1.28.3:
@@ -299,5 +337,9 @@ coredns/coredns:
     version: v1.10.1
   v1.28.8:
     version: v1.10.1
+  v1.28.9:
+    version: v1.10.1
   v1.29.1:
+    version: v1.11.1
+  v1.29.4:
     version: v1.11.1
