--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -80,6 +80,11 @@ docker:
     version_rhel8: 19.03*
     version_rhel9: 20.10*
     version_debian: 5:20.10.*
+  v1.27.13:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
   v1.28.0:
     version_rhel: 19.03*
     version_rhel8: 19.03*
@@ -105,7 +110,17 @@ docker:
     version_rhel8: 19.03*
     version_rhel9: 20.10*
     version_debian: 5:20.10.*
+  v1.28.9:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
   v1.29.1:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
+  v1.29.4:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_rhel9: 20.10*
@@ -141,6 +156,8 @@ containerd:
     version_debian: 1.6.*
   v1.27.8:
     version_debian: 1.6.*
+  v1.27.13:
+    version_debian: 1.6.*
   v1.28.0:
     version_debian: 1.6.*
   v1.28.3:
@@ -151,7 +168,11 @@ containerd:
     version_debian: 1.6.*
   v1.28.8:
     version_debian: 1.6.*
+  v1.28.9:
+    version_debian: 1.6.*
   v1.29.1:
+    version_debian: 1.6.*
+  v1.29.4:
     version_debian: 1.6.*
 containerdio:
   v1.23.1:
@@ -229,6 +250,11 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
     version_debian: 1.6.*
+  v1.27.13:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
   v1.28.0:
     version_rhel: 1.6*
     version_rhel8: 1.6*
@@ -254,7 +280,17 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
     version_debian: 1.6.*
+  v1.28.9:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
   v1.29.1:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
+  v1.29.4:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
