--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -49,6 +49,8 @@ kube-apiserver:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.30.1:
+    version: v1.30.1
 kube-controller-manager:
   v1.23.1:
     version: v1.23.1
@@ -98,6 +100,8 @@ kube-controller-manager:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.30.1:
+    version: v1.30.1
 kube-scheduler:
   v1.23.1:
     version: v1.23.1
@@ -147,6 +151,8 @@ kube-scheduler:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.30.1:
+    version: v1.30.1
 kube-proxy:
   v1.23.1:
     version: v1.23.1
@@ -196,6 +202,8 @@ kube-proxy:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.30.1:
+    version: v1.30.1
 pause:
   v1.23.1:
     version: '3.6'
@@ -244,6 +252,8 @@ pause:
   v1.29.1:
     version: '3.9'
   v1.29.4:
+    version: '3.9'
+  v1.30.1:
     version: '3.9'
 etcd:
   v1.23.1:
@@ -294,6 +304,8 @@ etcd:
     version: 3.5.10-0
   v1.29.4:
     version: 3.5.12-0
+  v1.30.1:
+    version: 3.5.12-0
 coredns/coredns:
   v1.23.1:
     version: v1.8.6
@@ -342,4 +354,6 @@ coredns/coredns:
   v1.29.1:
     version: v1.11.1
   v1.29.4:
+    version: v1.11.1
+  v1.30.1:
     version: v1.11.1
