--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,8 +8,14 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
-  crictl: []
+  calicoctl:
+  - v1.27.13
+  - v1.28.9
+  - v1.29.4
+  crictl:
+  - v1.27.13
+  - v1.28.9
+  - v1.29.4
 packages:
   docker:
     version_rhel: []
@@ -34,7 +40,13 @@ packages:
     version_rhel9: false
     version_debian: false
 plugins:
-  calico: []
-  nginx-ingress-controller: []
+  calico:
+  - v1.27.13
+  - v1.28.9
+  - v1.29.4
+  nginx-ingress-controller:
+  - v1.27.13
+  - v1.28.9
+  - v1.29.4
   kubernetes-dashboard: []
   local-path-provisioner: []
