Add a switcher to allow unavailable nodes ignoring during /etc/hosts update

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -18,6 +18,7 @@ globals:
       retries: 15
   timeout_download:
     60
+  ignore_unavailable_nodes_for_etchosts_update: false
 
 node_defaults:
   boot:
