--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -36,13 +36,13 @@ calico:
   v1.28.8:
     version: v3.27.0
   v1.28.9:
-    version: v3.27.3
+    version: v3.28.0
   v1.29.1:
-    version: v3.27.0
+    version: v3.28.0
   v1.29.4:
-    version: v3.27.3
+    version: v3.28.0
   v1.30.1:
-    version: v3.27.3
+    version: v3.28.0
 nginx-ingress-controller:
   v1.25.2:
     version: v1.4.0
@@ -90,16 +90,16 @@ nginx-ingress-controller:
     version: v1.9.6
     webhook-version: v20231226-1a7112e06
   v1.28.9:
-    version: v1.10.1
+    version: v1.11.1
     webhook-version: v1.4.1
   v1.29.1:
-    version: v1.9.6
-    webhook-version: v20231226-1a7112e06
+    version: v1.11.1
+    webhook-version: v1.4.1
   v1.29.4:
-    version: v1.10.1
+    version: v1.11.1
     webhook-version: v1.4.1
   v1.30.1:
-    version: v1.10.1
+    version: v1.11.1
     webhook-version: v1.4.1
 kubernetes-dashboard:
   v1.25.2:
@@ -206,14 +206,14 @@ local-path-provisioner:
     version: v0.0.26
     busybox-version: 1.34.1
   v1.28.9:
-    version: v0.0.26
+    version: v0.0.27
     busybox-version: 1.34.1
   v1.29.1:
-    version: v0.0.26
+    version: v0.0.27
     busybox-version: 1.34.1
   v1.29.4:
-    version: v0.0.26
+    version: v0.0.27
     busybox-version: 1.34.1
   v1.30.1:
-    version: v0.0.26
+    version: v0.0.27
     busybox-version: 1.34.1
