--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -33,12 +33,18 @@ kube-apiserver:
     version: v1.28.8
   v1.28.9:
     version: v1.28.9
+  v1.28.12:
+    version: v1.28.12
   v1.29.1:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.29.7:
+    version: v1.29.7
   v1.30.1:
     version: v1.30.1
+  v1.30.3:
+    version: v1.30.3
 kube-controller-manager:
   v1.25.2:
     version: v1.25.2
@@ -72,12 +78,18 @@ kube-controller-manager:
     version: v1.28.8
   v1.28.9:
     version: v1.28.9
+  v1.28.12:
+    version: v1.28.12
   v1.29.1:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.29.7:
+    version: v1.29.7
   v1.30.1:
     version: v1.30.1
+  v1.30.3:
+    version: v1.30.3
 kube-scheduler:
   v1.25.2:
     version: v1.25.2
@@ -111,12 +123,18 @@ kube-scheduler:
     version: v1.28.8
   v1.28.9:
     version: v1.28.9
+  v1.28.12:
+    version: v1.28.12
   v1.29.1:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.29.7:
+    version: v1.29.7
   v1.30.1:
     version: v1.30.1
+  v1.30.3:
+    version: v1.30.3
 kube-proxy:
   v1.25.2:
     version: v1.25.2
@@ -150,12 +168,18 @@ kube-proxy:
     version: v1.28.8
   v1.28.9:
     version: v1.28.9
+  v1.28.12:
+    version: v1.28.12
   v1.29.1:
     version: v1.29.1
   v1.29.4:
     version: v1.29.4
+  v1.29.7:
+    version: v1.29.7
   v1.30.1:
     version: v1.30.1
+  v1.30.3:
+    version: v1.30.3
 pause:
   v1.25.2:
     version: '3.8'
@@ -189,11 +213,17 @@ pause:
     version: '3.9'
   v1.28.9:
     version: '3.9'
+  v1.28.12:
+    version: '3.9'
   v1.29.1:
     version: '3.9'
   v1.29.4:
     version: '3.9'
+  v1.29.7:
+    version: '3.9'
   v1.30.1:
+    version: '3.9'
+  v1.30.3:
     version: '3.9'
 etcd:
   v1.25.2:
@@ -228,11 +258,17 @@ etcd:
     version: 3.5.12-0
   v1.28.9:
     version: 3.5.12-0
+  v1.28.12:
+    version: 3.5.12-0
   v1.29.1:
     version: 3.5.10-0
   v1.29.4:
     version: 3.5.12-0
+  v1.29.7:
+    version: 3.5.12-0
   v1.30.1:
+    version: 3.5.12-0
+  v1.30.3:
     version: 3.5.12-0
 coredns/coredns:
   v1.25.2:
@@ -267,9 +303,15 @@ coredns/coredns:
     version: v1.10.1
   v1.28.9:
     version: v1.10.1
+  v1.28.12:
+    version: v1.10.1
   v1.29.1:
     version: v1.11.1
   v1.29.4:
     version: v1.11.1
+  v1.29.7:
+    version: v1.11.1
   v1.30.1:
+    version: v1.11.1
+  v1.30.3:
     version: v1.11.1
