--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -37,11 +37,17 @@ containerd:
     version_debian: 1.6.*
   v1.28.9:
     version_debian: 1.6.*
+  v1.28.12:
+    version_debian: 1.6.*
   v1.29.1:
     version_debian: 1.6.*
   v1.29.4:
     version_debian: 1.6.*
+  v1.29.7:
+    version_debian: 1.6.*
   v1.30.1:
+    version_debian: 1.6.*
+  v1.30.3:
     version_debian: 1.6.*
 containerdio:
   v1.25.2:
@@ -108,6 +114,10 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
+  v1.28.12:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
   v1.29.1:
     version_rhel: 1.6*
     version_rhel8: 1.6*
@@ -116,7 +126,15 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
+  v1.29.7:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
   v1.30.1:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+  v1.30.3:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
