--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "typing_extensions==4.11.*",
     "pathvalidate==3.2.*",
     "useful_types==0.2.*",
+    "packaging==24.1.*"
 ]
 requires-python = ">=3.8"
 
