--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -45,6 +45,8 @@ containerd:
     version_debian: 1.6.*
   v1.30.3:
     version_debian: 1.6.*
+  v1.31.0:
+    version_debian: 1.6.*
 containerdio:
   v1.26.3:
     version_rhel: 1.6*
@@ -123,6 +125,10 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
   v1.30.3:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+  v1.31.0:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
