--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -41,6 +41,8 @@ kube-apiserver:
     version: v1.30.1
   v1.30.3:
     version: v1.30.3
+  v1.31.0:
+    version: v1.31.0
 kube-controller-manager:
   v1.26.3:
     version: v1.26.3
@@ -82,6 +84,8 @@ kube-controller-manager:
     version: v1.30.1
   v1.30.3:
     version: v1.30.3
+  v1.31.0:
+    version: v1.31.0
 kube-scheduler:
   v1.26.3:
     version: v1.26.3
@@ -123,6 +127,8 @@ kube-scheduler:
     version: v1.30.1
   v1.30.3:
     version: v1.30.3
+  v1.31.0:
+    version: v1.31.0
 kube-proxy:
   v1.26.3:
     version: v1.26.3
@@ -164,6 +170,8 @@ kube-proxy:
     version: v1.30.1
   v1.30.3:
     version: v1.30.3
+  v1.31.0:
+    version: v1.31.0
 pause:
   v1.26.3:
     version: '3.9'
@@ -205,6 +213,8 @@ pause:
     version: '3.9'
   v1.30.3:
     version: '3.9'
+  v1.31.0:
+    version: '3.10'
 etcd:
   v1.26.3:
     version: 3.5.6-0
@@ -246,6 +256,8 @@ etcd:
     version: 3.5.12-0
   v1.30.3:
     version: 3.5.12-0
+  v1.31.0:
+    version: 3.5.15-0
 coredns/coredns:
   v1.26.3:
     version: v1.9.3
@@ -286,4 +298,6 @@ coredns/coredns:
   v1.30.1:
     version: v1.11.1
   v1.30.3:
+    version: v1.11.1
+  v1.31.0:
     version: v1.11.1
