--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -140,6 +140,12 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.30.0
+  v1.31.1:
+    calico: v3.28.1
+    nginx-ingress-controller: v1.11.1
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.27
+    crictl: v1.30.0
 # After any change, please run scripts/thirdparties/sync.py
 
 # The following optional keys are supported in addition to the 5 required software keys:
