--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -43,6 +43,8 @@ kube-apiserver:
     version: v1.30.3
   v1.31.0:
     version: v1.31.0
+  v1.31.1:
+    version: v1.31.1
 kube-controller-manager:
   v1.26.3:
     version: v1.26.3
@@ -86,6 +88,8 @@ kube-controller-manager:
     version: v1.30.3
   v1.31.0:
     version: v1.31.0
+  v1.31.1:
+    version: v1.31.1
 kube-scheduler:
   v1.26.3:
     version: v1.26.3
@@ -129,6 +133,8 @@ kube-scheduler:
     version: v1.30.3
   v1.31.0:
     version: v1.31.0
+  v1.31.1:
+    version: v1.31.1
 kube-proxy:
   v1.26.3:
     version: v1.26.3
@@ -172,6 +178,8 @@ kube-proxy:
     version: v1.30.3
   v1.31.0:
     version: v1.31.0
+  v1.31.1:
+    version: v1.31.1
 pause:
   v1.26.3:
     version: '3.9'
@@ -214,6 +222,8 @@ pause:
   v1.30.3:
     version: '3.9'
   v1.31.0:
+    version: '3.10'
+  v1.31.1:
     version: '3.10'
 etcd:
   v1.26.3:
@@ -258,6 +268,8 @@ etcd:
     version: 3.5.12-0
   v1.31.0:
     version: 3.5.15-0
+  v1.31.1:
+    version: 3.5.15-0
 coredns/coredns:
   v1.26.3:
     version: v1.9.3
@@ -301,3 +313,5 @@ coredns/coredns:
     version: v1.11.1
   v1.31.0:
     version: v1.11.1
+  v1.31.1:
+    version: v1.11.3
