--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,7 +8,11 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
+  calicoctl:
+  - v1.28.12
+  - v1.29.7
+  - v1.30.3
+  - v1.31.1
   crictl: []
 packages:
   containerd:
@@ -31,7 +35,11 @@ packages:
     version_rhel9: false
     version_debian: false
 plugins:
-  calico: []
+  calico:
+  - v1.28.12
+  - v1.29.7
+  - v1.30.3
+  - v1.31.1
   nginx-ingress-controller: []
   kubernetes-dashboard: []
   local-path-provisioner: []
